# Cinux-Base

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: static_hash_map.md
document/: architecture.md  build-guide.md  component-index.md  quick-start.md
document/api/: algorithm.md  bit-ops.md  bitmap.md  buffer.md  checksum.md  crc32.md  endian.md  error-or.md  function.md  intrusive-list.md  logger.md  numeric.md  optional.md  random.md  ring-buffer.md  scope-guard.md  span.md  static-hash-map.md  static-string.md  string-view.md  vformat.md
include/cinux/: algorithm.hpp  bit_ops.hpp  bitmap.hpp  buffer.hpp  checksum.hpp  crc32.hpp  endian.hpp  expected.hpp  function.hpp  intrusive_list.hpp  logger.hpp  numeric.hpp  optional.hpp  random.hpp  refcount.hpp  ring_buffer.hpp  scope_guard.hpp  span.hpp  static_hash_map.hpp  static_string.hpp  string_view.hpp
include/cinux/detail/: vformat.hpp
src/: checksum.cpp  crc32.cpp  logger.cpp
src/detail/: vformat.cpp
test/: CMakeLists.txt  test_algorithm.cpp  test_bit_ops.cpp  test_bitmap.cpp  test_buffer.cpp  test_checksum.cpp  test_crc32.cpp  test_endian.cpp  test_expected.cpp  test_function.cpp  test_intrusive_list.cpp  test_logger.cpp  test_numeric.cpp  test_optional.cpp  test_random.cpp  test_ring_buffer.cpp  test_scope_guard.cpp  test_smoke.cpp  test_span.cpp  test_static_hash_map.cpp  test_static_string.cpp  test_string_view.cpp  test_vformat.cpp
